--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "@storybook/testing-react": "^1.3.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
