--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook -s public",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "chromatic": "npx chromatic --project-token=1f6fb24312b7"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -17,7 +18,6 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
-    "@storybook/testing-react": "^1.3.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -40,11 +40,15 @@
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/testing-react": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.11.4",
     "eslint-plugin-storybook": "^0.6.7",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "bollyground@0.1.0"
 }
