--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "storybook-addon-next-router": "^4.0.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
@@ -51,7 +52,8 @@
     "chromatic": "^6.11.4",
     "eslint-plugin-storybook": "^0.6.7",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1"
+    "jest-environment-jsdom": "^29.3.1",
+    "next-router-mock": "^0.8.0"
   },
   "readme": "ERROR: No README data found!",
   "_id": "bollyground@0.1.0"
