--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "13.0.5",
     "mongoose": "^6.8.0",
     "next": "13.0.5",
+    "next-auth": "^4.18.4",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -54,11 +55,11 @@
     "@testing-library/user-event": "^14.4.3",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.11.4",
+    "eslint-config-next": "12.2.2",
     "eslint-plugin-storybook": "^0.6.7",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "next-router-mock": "^0.8.0",
-    "eslint-config-next": "12.2.2"
+    "next-router-mock": "^0.8.0"
   },
   "readme": "ERROR: No README data found!",
   "_id": "bollyground@0.1.0"
