--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/styles": "^5.10.16",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "bcrypt": "^5.1.0",
     "ckeditor5-custom-build": "file:./ckeditor5",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
@@ -53,6 +55,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/next-auth": "^3.15.0",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.11.4",
     "eslint-config-next": "12.2.2",
