--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
     "@mui/material": "^5.10.16",
     "@mui/styles": "^5.10.16",
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "aws-sdk": "^2.1271.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcrypt": "^5.1.0",
     "ckeditor5-custom-build": "file:./ckeditor5",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "mongoose": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.0.5",
     "next-auth": "^4.18.4",
     "next-connect": "^0.13.0",
