--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "aws-sdk": "^2.1271.0",
+    "axios": "^1.2.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcrypt": "^5.1.0",
     "ckeditor5-custom-build": "file:./ckeditor5",
