--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-query": "^3.39.2",
     "storybook-addon-next-router": "^4.0.1",
     "typescript": "4.9.3"
   },
