--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.test.js", "components/Editor/Editor.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.test.js",
+    "components/Editor/Editor.jsx",
+    "lib/mongoose/dbConnect.ㅓㄴ"
+  ],
   "exclude": ["node_modules"]
 }
