--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.10.16",
     "@mui/styles": "^5.10.16",
     "@types/bcrypt": "^5.0.0",
+    "@types/debounce": "^1.2.1",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "18.11.9",
@@ -31,6 +32,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcrypt": "^5.1.0",
     "ckeditor5-custom-build": "file:./ckeditor5",
+    "debounce": "^1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "mongoose": "^6.8.0",
